simplify getStringList null handling